--- a/Libraries/TraderCRM/project.json
+++ b/Libraries/TraderCRM/project.json
@@ -1,14 +1,12 @@
 {
-  "name": "rpa-certificates-of-free-sale",
-  "description": "RPA Certificates of Free Sale process which receives applications via email, logs cases in CRM and creates certificates",
-  "main": "Main.xaml",
+  "name": "TraderCRM",
+  "description": "Library containing reusable activities for Trader CRM",
+  "main": "NewActivity.xaml",
   "dependencies": {
-    "GetWorkflowDetailActivities": "[1.0.1]",
-    "Reusable.Components": "[1.0.7]",
-    "UiPath.Excel.Activities": "[2.8.6]",
-    "UiPath.Mail.Activities": "[1.10.4]",
-    "UiPath.System.Activities": "[20.4.0]",
-    "UiPath.UIAutomation.Activities": "[20.4.2]"
+    "UiPath.Excel.Activities": "2.8.6",
+    "UiPath.Mail.Activities": "1.8.6",
+    "UiPath.System.Activities": "20.4.0",
+    "UiPath.UIAutomation.Activities": "20.4.2"
   },
   "webServices": [],
   "schemaVersion": "4.0",
@@ -27,7 +25,7 @@
   },
   "designOptions": {
     "projectProfile": "Developement",
-    "outputType": "Process",
+    "outputType": "Library",
     "libraryOptions": {
       "includeOriginalXaml": false,
       "privateWorkflows": []
