Changed breakpoint logic to ask user for stop reason

--- a/rpa-certificates-of-free-sale/project.json
+++ b/rpa-certificates-of-free-sale/project.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "GetWorkflowDetailActivities": "[1.0.1]",
     "Reusable.Components": "[1.0.7]",
-    "TraderCRM": "[1.0.12]",
+    "TraderCRM": "[1.0.13]",
     "UiPath.Excel.Activities": "[2.8.6]",
     "UiPath.Mail.Activities": "[1.10.4]",
     "UiPath.System.Activities": "[20.4.0]",
@@ -15,7 +15,7 @@
   "webServices": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.4",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
@@ -35,6 +35,10 @@
       "privateWorkflows": []
     },
     "fileInfoCollection": []
+  },
+  "arguments": {
+    "input": [],
+    "output": []
   },
   "expressionLanguage": "VisualBasic"
 }
