--- a/rpa-certificates-of-free-sale/project.json
+++ b/rpa-certificates-of-free-sale/project.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "GetWorkflowDetailActivities": "[1.0.1]",
     "Reusable.Components": "[1.0.7]",
-    "TraderCRM": "[1.0.15]",
+    "TraderCRM": "[1.0.16]",
     "UiPath.Excel.Activities": "[2.8.6]",
     "UiPath.Mail.Activities": "[1.8.6]",
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.2]",
+    "UiPath.Word.Activities": "[1.6.4]",
     "WordVBActivities": "[1.0.4]"
   },
   "webServices": [],
