journey testing - changes for spanish cert filepaths, added sep cert user input

--- a/rpa-certificates-of-free-sale/project.json
+++ b/rpa-certificates-of-free-sale/project.json
@@ -7,6 +7,7 @@
     "Reusable.Components": "[1.0.7]",
     "TraderCRM": "[1.0.18]",
     "UiPath.Excel.Activities": "[2.8.6]",
+    "UiPath.Form.Activities": "[1.1.11]",
     "UiPath.Mail.Activities": "[1.8.6]",
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.2]",
