--- a/Libraries/WordVBActivities/.local/ProjectSettings.json
+++ b/Libraries/WordVBActivities/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"OpenWord.xaml\",\"ReadTextFormField.xaml\"]","LibraryProjectSettings":"{\"IncludeSourcesByDefault\":true,\"UseCSharpCompiler\":false,\"DefaultActivitiesRootCategories\":[null]}","ProjectWatches":"{\"Value\":[]}"}
+{"ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"ReadCheckBox.xaml\",\"ReadDropDown.xaml\",\"ReadTextFormField.xaml\"]","LibraryProjectSettings":"{\"IncludeSourcesByDefault\":true,\"UseCSharpCompiler\":false,\"DefaultActivitiesRootCategories\":[null]}","ProjectWatches":"{\"Value\":[]}"}
