upgraded to new library

--- a/rpa-certificates-of-free-sale/.local/rpa-certificates-of-free-sale.nuget.props
+++ b/rpa-certificates-of-free-sale/.local/rpa-certificates-of-free-sale.nuget.props
@@ -3,7 +3,7 @@
   <PropertyGroup Condition=" '$(ExcludeRestorePackageImports)' != 'true' ">
     <RestoreSuccess Condition=" '$(RestoreSuccess)' == '' ">True</RestoreSuccess>
     <RestoreTool Condition=" '$(RestoreTool)' == '' ">NuGet</RestoreTool>
-    <ProjectAssetsFile Condition=" '$(ProjectAssetsFile)' == '' ">C:\Users\m1006109\Downloads\COFS EDIT\rpa-certificates-of-free-sale\rpa-certificates-of-free-sale\.local\AllDependencies.json</ProjectAssetsFile>
+    <ProjectAssetsFile Condition=" '$(ProjectAssetsFile)' == '' ">C:\Users\m1006109\Downloads\OneDrive - Defra\GITHUB\rpa-certificates-of-free-sale\rpa-certificates-of-free-sale\.local\AllDependencies.json</ProjectAssetsFile>
     <NuGetPackageRoot Condition=" '$(NuGetPackageRoot)' == '' ">$(UserProfile)\.nuget\packages\</NuGetPackageRoot>
     <NuGetPackageFolders Condition=" '$(NuGetPackageFolders)' == '' ">C:\Users\m1006109\.nuget\packages\</NuGetPackageFolders>
     <NuGetProjectStyle Condition=" '$(NuGetProjectStyle)' == '' ">Unknown</NuGetProjectStyle>
